--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Muslum Alizade</title>
 </head>
 <body>
- <p>hello world !</p>   
+    <nav>
+        <a href="./"> home</a>
+        <a href="./about"> about</a>
+    </nav>
+ <div></div>  
 </body>
 </html>
