--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <nav>
         <a href="./"> home</a>
-        <a href="./about"> about</a>
+        <a href="./about.html"> about</a>
+        <a href="./contact.html" >contact</a>
     </nav>
  <div></div>  
 </body>
